Fixed  configuration for services

--- a/user-order-management.properties
+++ b/user-order-management.properties
@@ -8,7 +8,7 @@ server.port=8080
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/userordermanagement
 spring.datasource.username=root
-spring.datasource.password=yourpassword
+spring.datasource.password=password
 
 # ===============================
 # JPA
